--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,10 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+.container{
+  margin-top: 10px;
+  align-self: start;
+}
 
 @media (prefers-color-scheme: light) {
   :root {
