--- a/src/Dropzone.css
+++ b/src/Dropzone.css
@@ -4,8 +4,7 @@
     font-size: 18px;
     font-weight: 500;
     display: flex;
-    flex-direction:
-    column ;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 15px;
@@ -16,11 +15,13 @@
     cursor: pointer;
     transition: all 0.3s ease;
 }
-.file-btn:hover{
+
+.file-btn:hover {
     color: #5d4dcc;
     background-color: #fff;
 }
-.file—btn span{
+
+.file—btn span {
     width: 50px;
     height: 50px;
     font-size: 30px;
@@ -29,9 +30,10 @@
     align-items: center;
     justify-content: center;
     border-radius: 25px;
-    background-color: #f1efff ;
+    background-color: #f1efff;
 }
-.file-card{
+
+.file-card {
     width: 300px;
     display: flex;
     align-items: center;
@@ -41,37 +43,41 @@
     border: 1px solid rgba(117, 96, 255, 0.281);
     border-radius: 6px;
     padding: 8px 15px;
-    }
+}
+
 .file-info {
-    flex:1;
+    flex: 1;
     display: flex;
     align-items: center;
     gap: 15px;
-    }
-.file-info h6{
-    flex:1;
-    font-size: 13px;
-    font-weight:300
 }
-.progress-bg{
+
+.file-info h6 {
+    flex: 1;
+    font-size: 13px;
+    font-weight: 300
+}
+
+.progress-bg {
     width: 0%;
     height: 5px;
     background-color: #5d4dcc;
     border-radius: 8px;
     transition: width 0.5s ease;
 }
-.icon{
+
+.icon {
     font-size: 30px;
     color: #7460ff;
 }
 
-.close-icon{
+.close-icon {
     font-size: 18px;
     cursor: pointer;
 }
 
 .file-info button,
-.check-circle{
+.check-circle {
     width: 36px;
     height: 36px;
     display: flex;
@@ -84,9 +90,9 @@
     border-radius: 30px;
 }
 
-.upload-btn{
+.upload-btn {
     width: 330px;
-    font-size:14px;
+    font-size: 14px;
     font-weight: 500;
     color: #fff;
     background-color: #7460ff;
