--- a/src/Dropzone.css
+++ b/src/Dropzone.css
@@ -1,3 +1,22 @@
+.layout {
+    display: 'flex';
+    align-items: 'flex-start';
+}
+
+.dropzone-area{
+    border: 1px dashed #ccc;
+    size: 60px;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+}
+.dropzone-area input::file-selector-button {
+    font-weight: 900;
+    color: green;
+    padding: 0.5em;
+    border: thin solid grey;
+    border-radius: 3px;
+}
 .file—btn {
     width: 330px;
     height: 150px;
