--- a/src/TopBar.css
+++ b/src/TopBar.css
@@ -1,26 +1,34 @@
 .topBar {
-  align-content: center;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
   height: 60px;
-  display: flex;
-  margin: 16px;
+  padding: 0 16px;
   background-color: gold;
 }
 
+.logoContainer {
+  flex: 1;
+}
+
 .textContainer {
-  padding-left: 30px;
-  padding-right: 10px;
+  flex: 2;
+  display: flex;
+  justify-content: center;
+  text-align: center;
 }
 
 .buttonContainer {
-  padding-left: 30px;
+  flex: 1;
+  right: 30px;
   border-radius: 30px;
 }
 
 /* Modal styling */
 .modal {
-  display: block; /* Show the modal */
+  display: block;
+  /* Show the modal */
   position: fixed;
   z-index: 1;
   left: 0;
@@ -28,7 +36,8 @@
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgba(0, 0, 0, 0.5); /* Black background with opacity */
+  background-color: rgba(0, 0, 0, 0.5);
+  /* Black background with opacity */
 }
 
 .modal-content {
