--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,8 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0;
   text-align: center;
 }
-
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #fff;
+.section{
+  margin-top: 0;
 }
