--- a/src/TopBar.css
+++ b/src/TopBar.css
@@ -2,10 +2,9 @@
   display: flex;
   min-width: 101rem;
   align-items: center;
-  width: 100%;
-  height: 60px;
-  padding: 0 12px;
   background-color: gold;
+  width: 100%;
+  height: 100px;
 }
 
 .logoContainer {
@@ -27,10 +26,8 @@
 .status{
   flex: 1;
 }
-/* Modal styling */
 .modal {
   display: block;
-  /* Show the modal */
   position: fixed;
   z-index: 1;
   left: 0;
@@ -38,8 +35,8 @@
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgba(0, 0, 0, 0.5);
-  /* Black background with opacity */
+  background-color: #0000000f;
+    
 }
 
 .modalContent {
@@ -65,7 +62,7 @@
 
 .modalClose:hover,
 .modalClose:focus {
-  color: #000;
+  color: #040054fe;
   text-decoration: none;
   cursor: pointer;
 }
@@ -78,4 +75,8 @@ input[type="file"] {
 .modal h3 {
   font-size: 20px;
   margin-bottom: 10px;
+}
+.close-btn{
+  margin-top: 20px;
+
 }
