--- a/src/index.css
+++ b/src/index.css
@@ -4,31 +4,14 @@
   font-weight: 400;
   color-scheme: light dark;
   color: #000;
-  background-color: #fff;
+  background-color: #f9f9f9;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-
-a:hover {
-  color: #535bf2;
-}
-
-body {
+body{
   margin: 0;
-  display: flex;
-  text-align: center;
-  justify-content: center;
-  place-items: center;
-  min-width: 320px;
-
 }
 
 h1 {
@@ -49,30 +32,10 @@ button {
 }
 
 button:hover {
-  border-color: #646cff;
+  background-color: #0055a5;
 }
 
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
-.container {
-  margin-top: 10px;
-  align-self: start;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-
-  a:hover {
-    color: #747bff;
-  }
-
-  button {
-    background-color: #f9f9f9;
-  }
 }
