--- a/src/TopBar.css
+++ b/src/TopBar.css
@@ -2,7 +2,7 @@
   display: flex;
   min-width: 101rem;
   align-items: center;
-  background-color: gold;
+  background: white;
   width: 100%;
   height: 100px;
 }
