--- a/src/TopBar.css
+++ b/src/TopBar.css
@@ -6,6 +6,9 @@
   width: 100%;
   height: 100px;
 }
+.docs{
+  flex: 0.5;
+}
 
 .logoContainer {
   margin-left: 30px;
@@ -28,7 +31,6 @@
   flex: 1;
 }
 .modal {
-  display: block;
   position: fixed;
   z-index: 1;
   left: 0;
