ui: docs span and topbar shadow

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@
   --secondary-turkcell-blue: #003087;
   --secondary-turkcell-yellow: #f2a900;
   --secondary-turkcell-light-blue: #e2f0fa;
+  --shadow-light: #7d95a568;
 }
 
 body {
