--- a/src/TopBar.css
+++ b/src/TopBar.css
@@ -5,8 +5,10 @@
   background: white;
   width: 100%;
   height: 100px;
+  box-shadow: 2px 2px 10px 4px var(--shadow-light);
 }
-.docs{
+
+.docs {
   flex: 0.5;
 }
 
@@ -27,9 +29,11 @@
   right: 30px;
   border-radius: 30px;
 }
-.status{
+
+.status {
   flex: 1;
 }
+
 .modal {
   position: fixed;
   z-index: 1;
@@ -39,7 +43,7 @@
   height: 100%;
   overflow: auto;
   background-color: #0000004f;
-    
+
 }
 
 .modalContent {
@@ -50,7 +54,7 @@
   padding: 20px;
   border: 1px solid #888;
   width: 80%;
-  max-width: 500px;
+  max-width: 800px;
   border-radius: 10px;
   position: relative;
 }
@@ -72,15 +76,11 @@
   cursor: pointer;
 }
 
-input[type="file"] {
-  margin-top: 15px;
-  margin-bottom: 15px;
-}
-
 .modal h3 {
   font-size: 20px;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
 }
-.close-btn{
+
+.close-btn {
   margin-top: 20px;
 }
